# mcp-cli

./: .gitignore  FINDING2.md  FINDINGS.md  Makefile  README.md  TODO.md  pyproject.toml  server_config.json
examples/: basic_llm_call.py  mcp_round_trip.py  mcp_round_trip_2.py  mcp_round_trip_3.py  mcp_round_trip_with_toolmanager.py  ollama_llm_call.py  tool_round_trip.py
examples/sample_tools/: calculator_tool.py  search_tool.py  weather_tool.py
src/chuk_mcp/: Makefile  README.md  pyproject.toml
src/chuk_mcp/mcp_client/: mcp_pydantic_base.py
src/chuk_mcp/mcp_client/host/: environment.py  server_manager.py
src/chuk_mcp/mcp_client/messages/: exceptions.py  json_rpc_message.py  send_message.py
src/chuk_mcp/mcp_client/messages/initialize/: errors.py  mcp_client_capabilities.py  mcp_client_info.py  mcp_server_capabilities.py  mcp_server_info.py  send_messages.py
src/chuk_mcp/mcp_client/messages/ping/: send_messages.py
src/chuk_mcp/mcp_client/messages/prompts/: notifications.py  send_messages.py
src/chuk_mcp/mcp_client/messages/resources/: notifications.py  resource.py  resource_content.py  resource_template.py  send_messages.py
src/chuk_mcp/mcp_client/messages/tools/: send_messages.py  tool.py  tool_input_schema.py  tool_result.py
src/chuk_mcp/mcp_client/transport/stdio/: stdio_client.py  stdio_server_parameters.py  stdio_server_shutdown.py
src/chuk_mcp/scripts/: test.py
src/chuk_mcp/src/mcp_client/host/: server_manager.py
src/chuk_mcp/src/mcp_client/messages/: error_codes.py  json_rpc_message.py  message_method.py  send_message.py
src/chuk_mcp/src/mcp_client/messages/initialize/: mcp_client_capabilities.py  mcp_client_info.py  mcp_server_capabilities.py  mcp_server_info.py  send_messages.py
src/chuk_mcp/src/mcp_client/messages/ping/: send_messages.py
src/chuk_mcp/src/mcp_client/messages/prompts/: notifications.py  send_messages.py
src/chuk_mcp/src/mcp_client/messages/resources/: notifications.py  resource.py  resource_content.py  resource_template.py  send_messages.py
src/chuk_mcp/src/mcp_client/messages/tools/: notifications.py  send_messages.py  tool.py  tool_input_schema.py  tool_result.py
src/chuk_mcp/src/mcp_client/transport/stdio/: stdio_client.py
src/chuk_mcp/tests/mcp/messages/: test_fallback_send_tools.py  test_initialize.py  test_json_rpc_message.py  test_mcp_fallback_real_pydantic.py  test_mcp_pydantic_fallback.py  test_prompt_notifications.py  test_resource_notifications.py  test_send_message.py  test_send_ping.py  test_send_prompts.py  test_send_prompts_enhanced.py  test_send_resources.py  test_send_resources_enhanced.py  test_send_tools.py  test_send_tools_enhanced.py  test_tools_notifications.py
src/chuk_mcp/tests/mcp/transport/stdio/: test_stdio_client.py  test_stdio_server_parameters.py  test_stdio_server_shutdown.py
src/cli/: cli_options.py  config.py  main.py  test.py
src/cli/chat/: __init__.py  chat_context.py  chat_handler.py  command_completer.py  conversation.py  system_prompt.py  tool_processor.py  ui_helpers.py  ui_manager.py
src/cli/commands/: chat.py  interactive.py  ping.py  prompts.py  register_commands.py  resources.py  tools.py
src/cli/ui/: ui_helpers.py
src/host/: environment.py  server_manager.py
src/llm/: llm_client.py  tools_handler.py
src/llm/providers/: base.py  ollama_client.py  openai_client.py
src/mcp/messages/: error_codes.py  exceptions.py  json_rpc_message.py  message_method.py  send_message.py
src/mcp_cli/: __init__.py  cli_options.py  config.py  main.py  provider_config.py  run_command.py  stream_manager.py  test.py  vfs_monkey_patch.py
src/mcp_cli/chat/: __init__.py  __main__.py  chat_context.py  chat_handler.py  command_completer.py  conversation.py  system_prompt.py  tool_processor.py  ui_manager.py
src/mcp_cli/cli/: __init__.py  registry.py
src/mcp_cli/commands/: chat.py  clear.py  cmd.py  exit.py  help.py  interactive.py  model.py  ping.py  prompts.py  provider.py  register_commands.py  resources.py  servers.py  tools.py  tools_call.py
src/mcp_cli/interactive/: __init__.py  registry.py  shell.py
src/mcp_cli/llm/: __main__.py  llm_client.py  openai_style_mixin.py  system_prompt_generator.py  tools_handler.py
src/mcp_cli/tools/: adapter.py  formatting.py  manager.py  models.py
src/mcp_cli/ui/: colors.py  ui_helpers.py
src/mcp_cli/utils/: async_utils.py
src/mcpcli/: __main__.py  chat_handler.py  test.py  tools_handler.py
tests/mcp/: test_json_rpc_message.py  test_send_message.py  test_send_ping_message.py  test_send_prompts.py  test_send_resources.py  test_send_resources_enhanced.py  test_send_tools.py  test_send_tools_enhanced.py  test_tools_notifications.py
tests/mcp/messages/: test_initialize.py  test_prompt_notifications.py  test_resource_notifications.py  test_send_message.py  test_send_ping.py  test_send_prompts_enhanced.py  test_send_resources.py
tests/mcp_cli/: test_cli_options.py  test_config.py  test_provider_config.py  test_run_command.py  test_stream_manager.py
tests/mcp_cli/chat/: test_chat_context.py  test_chat_handler.py  test_tool_processor.py  test_ui_manager.py
tests/mcp_cli/cli/: test_cli_chat.py  test_cli_interactive.py  test_cli_registry.py  test_cmd.py
tests/mcp_cli/commands/: test_chat.py  test_clear.py  test_cmd.py  test_commands.py  test_exit.py  test_help.py  test_interactive.py  test_ping.py  test_prompts.py  test_register_commands.py  test_resources.py  test_servers.py  test_tools.py  test_tools_call.py
tests/mcp_cli/interactive/: test_interactive_registry.py  test_interactive_shell.py
(+106 files in other folders)
