[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp"
version = "0.1.4"
description = "Model Context Provider Client"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Chris Hay", email = "chrishayuk@googlemail.com"}
]
keywords = ["llm", "openai", "claude", "mcp", "client"]
license = "MIT"
dependencies = [
    "anyio>=4.9.0",
    "requests>=2.32.3",
    "typing-extensions>=4.7.1,<5.0.0",
]

[tool.setuptools]
packages = ["mcp_client"]

[dependency-groups]
dev = [
    "pydantic>=2.11.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
